<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="nick_name_text"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            android:editable="false"/>

    <ListPreference
            android:key="work_mode_list"
            android:title="@string/pref_title_set_work_mode"
            android:defaultValue="0"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

    <EditTextPreference
            android:key="work_time_rate_text"
            android:title="@string/pref_title_work_time_rate"
            android:defaultValue="@string/pref_default_work_time_rate"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"/>

    <SwitchPreference
            android:key="vibrate_to tell_scope"
            android:title="@string/pref_title_vibrate_to_tell_scope"
            android:summary="@string/pref_description_vibrate_to_tell_scope"
            android:defaultValue="true"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
